--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -209,7 +209,7 @@ The neural network model has been taken in our team. As a subfield of machine le
 
 ![
 **Comparison between predictions and targets.**
-](images/Neural  target and prediction.png){#fig:wide-image}
+](images/Neural target and prediction.png){#fig:wide-image}
 
 A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in **Figure #**. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix. 
 
@@ -227,7 +227,7 @@ In the neural network model, find an optimum way to weight correction is crucial
 
 ![
 **Plot in overfitting,optimum, and underfitting.**
-](images/Plot in overfitting.png)
+](images/Plot in overfitting.png){#fig:wide-image}
 
 To make the predictions match well in validations, batch mode would be applied in this model. In the batch model, the weight updating is performed when all samples in the epochs are presented to the network. In this model, the epoch is 40, which means there are 40 times to wight the model. 
 
