--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -209,25 +209,25 @@ The neural network model has been taken in our team. As a subfield of machine le
 
 ![
 **Comparison between predictions and targets.**
-](images/Neural target and prediction.png){#fig:wide-image}
+](images/Neural_target&prediction.png){#fig:wide-image}
 
 A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in **Figure #**. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix. 
 
 ![
 **Neural Network.**
-](images/Neural network.png){#fig:wide-image}
+](images/Neural_network.png){#fig:wide-image}
 
 When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in **Figure #**. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain. 
 
 ![
 **Weight correction.**
-](images/Weight correction.png){#fig:wide-image}
+](images/Weight_correction.png){#fig:wide-image}
 
 In the neural network model, find an optimum way to weight correction is crucial. If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in **Figure #**.
 
 ![
 **Plot in overfitting,optimum, and underfitting.**
-](images/Plot in overfitting.png){#fig:wide-image}
+](images/Plot_in_overfitting.png){#fig:wide-image}
 
 To make the predictions match well in validations, batch mode would be applied in this model. In the batch model, the weight updating is performed when all samples in the epochs are presented to the network. In this model, the epoch is 40, which means there are 40 times to wight the model. 
 
