--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -209,7 +209,7 @@ The neural network model has been taken in our team. As a subfield of machine le
 
 ![
 **Comparison between predictions and targets.**
-](images/Neural_target&prediction.png){#fig:wide-image}
+](images/Neural_target.png){#fig:wide-image}
 
 A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in **Figure #**. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix. 
 
