--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -157,7 +157,9 @@ Feature scaling is a method used to standardize independent variables or feature
 
 In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.
 
-**Figure x. Z-score Normalization**
+![
+**Z-score Normalization**
+](images/z-score.png){#fig:square-image}
 
 ### Converting Categorical Features to Numerical
 
@@ -167,7 +169,9 @@ To allow the model to learn from the categorical features, they need to be conve
 
 Since most machine learning algorithms require numerical input and output variables. We have three categorical data now. We can use the one hot encoding to convert categorical data to integer data. **Figure x** is an example of how a dataframe looks like after one hot encoding. In python, we can use panda’s ‘pd.get_dummies’ function to achieve this. however, we find that the accuracy of model will be less after adding the these three features into our training data. Then we decided to drop all of them.
 
-**Figure x. One-hot Coding Example**
+![
+**One-hot Coding Example**
+](images/onehot.png){#fig:square-image}
 
 - The EDA revealed that there are 39 unique lines that conduct a wide range of rides from 2 to 1,300. Since the line is a strong predicator of bus loads (i.e., popular lines will likely have larger loads), the line were converted via one-hot encoding.
 - The EDA revealed that there are 7 unique vehicle types that conduct a wide range of rides from 452 to 9,414 . Since the vehicle type is a strong predicator of bus loads (i.e., larger vehicles can carry larger loads), the vehicle type was also converted via one-hot encoding.
@@ -243,6 +247,10 @@ Our best mode is a type of neural network model developed by Yujing using the sk
 
 *	Gradient boosting is a type of boosting algorithm. It relies on the intuition that the best possible next model, when combined with previous models, minimizes the overall prediction error. 
 
+![
+**Figure x. Gradient Boosting Algorithm**
+](images/GradientBoosting.png){#fig:wide-image}
+
 The Hyperparameters used in the model are shown as follow. The reason why each parameter has more than one number is that we also use the **grid search** method.
 *	max_depth: [3, 10]
 *	learning_rate: [0.1, 0.03]
@@ -262,8 +270,9 @@ The following figure shows the predictions against targets. The straight line re
 
 * The farther the point is from the line, the less accurate the prediction.
 
+![
 **Figure x. Predictions VS Targets**
-
+](images/T_P.png){#fig:square-image}
 
 
 # Chapter 5. Conclusions
