--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -2,9 +2,7 @@
 
 As part of the course project for the class, project group 7 acquired bus ridership per trip weekday data (from here on referred to as **bus data**) for the month of August from the Champaign-Urbana MTD bus organization (CUMTD). To supplement the bus data, CUMTD provided a manual that explains the process and methodology used to track, monitor and acquire the bus data. Figure @fig:wide-image gives an overview of the CUMTD area.
 
-![
-**CUMTD Route Map**
-](images/Figure1.png "CUMTD Route Map"){#fig:wide-image}
+![CUMTD Route Map](images/Figure1.png)
 
 ## 1.1 Background
 Bus operations are complex systems as they function at the intersection of transportation infrastructure and planning based on continually evolving user patterns.
