--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -54,9 +54,13 @@ The content in chapter 2 is broken down into the following 3 sections:
 The CU-MTD bus data was provided as a csv file. Therefore, the easiest way to setup, tidy and initially analyze the data was in tabular form. 
 The bus data was then assessed for meaningful ways it can be subdivided based on identifying independent variables. As shown in figure 1 below, the number of trips are fairly evenly distributed throughout the week.
 
-[![
+<p align="center">
+  <img src="images/Load_Avg_weekdays.png">
+</p>
+
+![
 **Load Avg in weekdays**
-](images/Load_Avg_weekdays.png)]{.center}
+](images/Load_Avg_weekdays.png){.center}
 
 ![
 **Duration of Load Avg**
