--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -57,7 +57,7 @@ The bus data was then assessed for meaningful ways it can be subdivided based on
 <p align="center">
   <img src="images/Load_Avg_weekdays.png">
 </p>
-[### Load Avg in weekdays]{.center}
+### [Load Avg in weekdays]{.center}
 
 ![
 **Duration of Load Avg**
