--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -57,7 +57,10 @@ The bus data was then assessed for meaningful ways it can be subdivided based on
 <p align="center">
   <img src="images/Load_Avg_weekdays.png">
 </p>
-[**Load Avg in weekdays**].center
+<div align="center">
+
+**Average Load per Weekday**
+</div>
 
 <p align="center">
   <img src="images/Load_Avg_duration.png">
