--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -158,7 +158,7 @@ Data preprocessing is an indispensable step in machine learning. It is important
 Data in the real world always have few missing values. This phenomena may be due to many reasons. There are many methods to handing missing values such as ignore the data row with missing value, replacing the missing value with mean or median value. **Table x** shows the top 8 percentage of missing value for each feature. 1.0 means all the values are missing. 0.0 means none of the data is missing. Here, the missing value of ‘Trip’ are filled with the mean of all the existing 'Trip' values. From the table we can know the eighth large of the percentage is already 0, which proves that there is no missing data for other features not appearing in the table.
 
 <p align="center">
-  <img src="missingvalue.png">
+  <img src="images/missingvalue.png">
 </p>
 <div align="center">
 
@@ -176,7 +176,7 @@ Feature scaling is a method used to standardize independent variables or feature
 In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.
 
 <p align="center">
-  <img src="z-score.png">
+  <img src="images/z-score.png">
 </p>
 <div align="center">
 
