--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -94,6 +94,11 @@ Also, for CUMTD, different bus lines serve specific groups of people. In this wa
 
 *Note: In the left figure, "Ex" stands for express buses, "H" stands for Hopper, "L" stands for late night buses, "M" stands for maintenance buses and "T" stands for training buses*
 
+![
+**Sample**
+](images/load avg in each bus line.png){#fig:wide-image}
+
+
 What's more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days. Moreover, to find its own difference of each bus route, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together.
 
 With these comparisons, some takeaways can be summarized as follows:
@@ -149,8 +154,6 @@ Data in the real world always have few missing values. This phenomena may be due
 
 Feature scaling is a method used to standardize independent variables or feature ranges of data. Since the value range of some original data is very different, the model will give more weight to the feature with large values in the learning process. However, in fact, the weight of each feature should not be considered in this way. In some machine learning algorithms, the objective function cannot work properly without normalization.
 
-**Figure #. Comparison of key predictive variables against load average.**
-
 #### Standardization (Z-score Normalization)
 
 In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.
@@ -190,13 +193,13 @@ The follow sections goes through a step by step process to develop and identify 
 Before building a complex model a baseline model was created that simply returns the load average using a fairly straight-forward support vector regression (SVR) model. SVR models are similar to linear regression models except that they minimize the model's coefficients as opposed to the sum of the squared errors. In addition, SVR provides the flexibility to define an acceptable error level. The model then finds the best fit line to the data points. The figure below illustrates an SVR model.
 
 ![
-**Illustration of support vector regression model**
+**Illustration of Support Vector Regression Model**
 ](images/SVR illustration.png){#fig:square-image}
 
 The SVR developed in this project resulted in an accuracy of 47 percent and a root mean squared error of 2.44 and is shown in the figure below.
 
 ![
-**Support vector regression model results**
+**Support Vector Regression Model Results**
 ](images/SVR Results.png){#fig:square-image}
 
 As expected, the baseline model does not fit the data well. The next section assesses if more complex models can produce results and performance.
@@ -210,7 +213,7 @@ As can be seen, the dense linear model results in better (lower) metrics than th
 The neural network model has been taken in our team. As a subfield of machine learning, neural network model would input data, and then train themselves to recognize patterns found in data, finally output a set of similar data. Therefore, choosing neural network would process the data like human brain. In our project, it works very well and precisely, and predicts a correspondingly positive relationship between predictions and targets, shown in the **Figure #**. The targets are validation value, and the perditions are predicted value. As the result shows, predictions and targets are very consistent. The detail coding process would show as follows.
 
 ![
-**Comparison between predictions and targets**
+**Comparison between Predictions and Targets**
 ](images/Neural_target.png){#fig:square-image}
 
 A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in **Figure #**. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix. 
@@ -222,13 +225,13 @@ A typical neural network model would have three kinds of layers, which are input
 When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in **Figure #**. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain. 
 
 ![
-**Weight correction**
+**Weight Correction**
 ](images/Weight_correction.png){#fig:square-image}
 
 In the neural network model, find an optimum way to weight correction is crucial. If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in **Figure #**.
 
 ![
-**Plot in overfitting,optimum, and underfitting**
+**Plot in Overfitting, Optimum, and Underfitting**
 ](images/Plot_in_overfitting.png){#fig:square-image}
 
 To make the predictions match well in validations, batch mode would be applied in this model. In the batch model, the weight updating is performed when all samples in the epochs are presented to the network. In this model, the epoch is 40, which means there are 40 times to wight the model. 
