--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -94,11 +94,6 @@ Also, for CUMTD, different bus lines serve specific groups of people. In this wa
 
 *Note: In the left figure, "Ex" stands for express buses, "H" stands for Hopper, "L" stands for late night buses, "M" stands for maintenance buses and "T" stands for training buses*
 
-![
-**Sample**
-](images/load avg in each bus line.png){#fig:wide-image}
-
-
 What's more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days. Moreover, to find its own difference of each bus route, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together.
 
 With these comparisons, some takeaways can be summarized as follows:
@@ -220,7 +215,7 @@ A typical neural network model would have three kinds of layers, which are input
 
 ![
 **Neural Network**
-](images/Neural_network.png){#fig:square-image}
+](images/Neural_network.png){#fig:wide-image}
 
 When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in **Figure #**. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain. 
 
