--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -94,7 +94,15 @@ Also, for CUMTD, different bus lines serve specific groups of people. In this wa
 
 *Note: In the left figure, "Ex" stands for express buses, "H" stands for Hopper, "L" stands for late night buses, "M" stands for maintenance buses and "T" stands for training buses*
 
-What's more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days. Moreover, to find its own difference of each bus route, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together.
+What's more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days. Moreover, to find its own difference of each bus route, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together. The following figures are the partial screenshots of the whole plot:
+
+![
+**Load Avg for All Buses per Day**
+](images/loadavg1.png){#fig:square-image}
+
+![
+**Load Avg for Each Route**
+](images/loadavg2.png){#fig:square-image}
 
 With these comparisons, some takeaways can be summarized as follows:
 
@@ -110,7 +118,7 @@ The following section summarizes the EDA results that are relevant to the model 
 * “Line” is the name of the bus line, which is what most riders are familiar with. There are 38 unique bus lines and 11 of them that do more than 10 trips per workday.
 
 * The data has 6 categorical features – with the exception of pattern, the other 6 features will be used in the model development effort.
-* 24 numerical features – the following features wil be used in the model: P-stops, total in and total out (flux?), and PM.
+* 24 numerical features – the following features wil be used in the model: P-stops, total in and total out, and PM.
 * The label is the load avg.
 
 The following features were identified to have strong predictive ability, indicated by a high correlation with the label (correlation in parenthesis):
